# hat-control

./: .gitmodules  COPYING  INSTALL  Makefile  Makefile.am  configure.ac  libhatcontrol.pc.in
contrib/: hat-control.py
rpm/: 0001-request-older-glib-version.patch  hat-control.spec
scripts/: HatPy_2.py  audiolat.sh  hat-control.html  pygraph.py
scripts/.svn/: all-wcprops  entries
scripts/.svn/text-base/: HatPy.py.svn-base  pulse.wav.svn-base  rgb.py.svn-base
sensor_configs/: config1  config2  config_accel3_demo  config_accel_demo  config_audio_demo  config_audiolat_demo  config_current_demo  config_opt3_demo  config_opt_demo  config_temp_demo
sensor_configs/.svn/: all-wcprops  entries
sensor_configs/.svn/text-base/: config_M_demo.svn-base  config_audio_demo.svn-base  config_audiolat_demo.svn-base  config_opt_demo.svn-base  config_temp_demo.svn-base
src/: Makefile  Makefile.am  hat_ctrl.c  hat_ctrl_lib.c  hat_ctrl_lib.h  hat_drv.c  hat_drv.h  shmemlib.c  shmemlib.h  u3.c  u3.h
